--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
   http: ^1.2.2
   reown_appkit: ^1.0.1
   web3dart: ^2.7.3
-
+  shared_preferences: ^2.3.2
+  ed25519_hd_key: ^2.3.0
+  hex: ^0.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   reown_walletkit: ^1.0.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
